Fixing up some styling errors and overflow

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@
   
   
 }
-
+body{
+  overflow-x:hidden;
+}
 * {
   font-family: 'Langar', cursive;
 }
