--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -1,9 +1,15 @@
 .my-projects {
   background-color: #3366cc;
+  width: 100%;
   color: black;
   text-align: center;
+  height: 100%;
+  padding: 25px;
+  
 }
-
+a{
+width: fit-content;
+}
 .subtitle {
   color: accent;
   font-weight: bold;
@@ -11,12 +17,8 @@
 }
 
 .portfolio {
-  display: grid;
-  grid-auto-rows: auto;
-  grid-template-rows: repeat(auto-fit, minnmax(300px, 1fr));
-  margin: 50px;
-  padding: 0;
-  max-width: 0 auto;
+ display: grid;
+ grid-template-columns: repeat(2, 1fr);
 }
 
 .portfolio-item {
@@ -24,16 +26,57 @@
 }
 
 .portfolio-img {
-  width: 600px;
-  height: 400px;
+  width: 500px;
+  height: 300px;
   transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
 }
 .portfolio-item:focus {
   position: relative;
   z-index: 2;
 }
-.portfolio-img:hover,
+/* .portfolio-img:hover,
 .portfolio-item:focus .portfolio-img {
   transform: scale(1.2);
   opacity: 0.75;
+} */
+.textOverImage{
+  position:relative;
+  width:500px;
+  height:300px;
+  float:left;
+  margin:0px;
+  background-size:100%;
+  background-position:center;
+  transition:0.5s;
+}
+
+.textOverImage:hover{
+  background-size:110%;
+}
+
+.textOverImage:after{
+  position:absolute;
+  top:90%;
+  bottom:0;
+  left:0;
+  right:0;
+  white-space:pre-wrap;
+  overflow:hidden;
+  background-color:rgba(0,0,0,0.3);
+  color:#fff;
+  padding:0 8px;
+  content:attr(data-text);
+  transition:0.5s;
+}
+
+.textOverImage:hover:after{
+  top:0;
+  padding:8px;
+  background-color:rgba(0,0,0,0.6);
+}
+
+.textOverImage:first-line{
+  color:#fff;
+  font-weight:bold;
+  font-size:1.5em;
 }
